20040715 DSSI v0.4 release
 * Added minimal GTK+ GUI.
 * Require DSSI v0.4.
 * Incorporated into DSSI as example code.
 * GUI: raise on 'show' if already visible.
 * Makefile: added install, use of liblo pkgconfig, use of correct
     FluidSynth includes.

20040623 v0.0.2
 * Added support for per-instance soundfont selection.
 * Changed from rendering directly into the output buffers, to
     always rendering into 16-byte aligned temporary buffers then
     copying to the output, in case libfluidsynth.* was compiled
     with SSE support.
 * Added mutex protection of fluidsynth structures between audio and
     control threads.
